--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,5 @@ r-code/01_data_prepreparation_kataster.R
 
 r-code/01_data_prepatation.R
 .Rproj.user
+
+r-code/01_data_preparation_climate_clustering.tex
